--- a/app/views/clients/businesslog_clients.html.erb
+++ b/app/views/clients/businesslog_clients.html.erb
@@ -44,7 +44,7 @@
 					<% end %>
 				<% end %>
 			</table>			
-			<%= f.submit "本日利用！！", class: "btn btn-primary " %>
+			<%= f.submit "本日利用(追加)！！", class: "btn btn-primary " %>
 			<br>↓
 			<br><%= link_to "本日の個別記録一覧", businesslogs_clients_index_path, local: true, method: :get, class: "btn btn-primary" %>
 		<% end %>	
