--- a/app/views/monitorings/monitoring_basic_info_affter.html.erb
+++ b/app/views/monitorings/monitoring_basic_info_affter.html.erb
@@ -9,39 +9,42 @@
     <%= f.date_select(:monitoring_worked_on_month, discard_year:true, discard_day:true) %>
     の利用者の状況をご報告いたします。
     </span></p>
-  
-    <%= f.label "【居宅介護支援計画書の生活全般の解決すべき課題(ニーズ)", class: "label-#{yield(:class_text)}" %>
+  <tr>
+    <td align="center"><%= f.label "【居宅介護支援計画書の生活全般の解決すべき課題(ニーズ)", class: "label-#{yield(:class_text)}" %>
     <br><%= f.text_area :monitoring_needs, class: "hoge", size: "70x7" %></br>
   
     <br><%= f.label "【居宅介護支援計画書の短期目標】", class: "label-#{yield(:class_text)}" %>
     <br><%= f.text_area :monitoring_short_run_target, class: "hoge", size: "70x7" %></br>
   
-    <br><%= f.label "基本的サービスの状況(ＡⅮⅬを含む)" ,class: "label-#{yield(:class_text)}" %></br>
+    </td>
+  </tr>
+  <tr>
+    <td align="center">
+      <br><%= f.label "基本的サービスの状況(ＡⅮⅬを含む)" ,class: "label-#{yield(:class_text)}" %></br>
     
-    <tr>  
-      <td align="center"><%= f.label "［他者交流］", class: "label-#{yield(:class_text)}" %>
+      <%= f.label "［他者交流］", class: "label-#{yield(:class_text)}" %>
       <br><%= f.radio_button :monitoring_exchange, "保たれている" %>
       <%= f.label "保たれている", class: "label-#{yield(:class_text)}" %>
       <%= f.radio_button :monitoring_exchange, "ほぼ保たれている" %>
       <%= f.label "ほぼ保たれている", class: "label-#{yield(:class_text)}" %>
-       <%= f.radio_button :monitoring_exchange, "あまり保たれていない" %>
+      <%= f.radio_button :monitoring_exchange, "あまり保たれていない" %>
       <%= f.label "あまり保たれていない", class: "label-#{yield(:class_text)}" %>
       <%= f.radio_button :monitoring_exchange, "保たれていない" %>
       <%= f.label "保たれていない", class: "label-#{yield(:class_text)}" %>
       
         
         <!--送迎-->
-        <br><%= f.label "［送迎］", class: "label-#{yield(:class_text)}" %></br>
-            <%= f.radio_button :monitoring_go_to_home, "問題あり" %>
-            <%= f.label "問題あり", class: "label-#{yield(:class_text)}" %>
-            <%= f.radio_button :monitoring_go_to_home, "問題なし" %>
-            <%= f.label "問題なし", class: "label-#{yield(:class_text)}" %>
-       
+      <br><%= f.label "［送迎］", class: "label-#{yield(:class_text)}" %></br>
+      <%= f.radio_button :monitoring_go_to_home, "問題あり" %>
+      <%= f.label "問題あり", class: "label-#{yield(:class_text)}" %>
+      <%= f.radio_button :monitoring_go_to_home, "問題なし" %>
+      <%= f.label "問題なし", class: "label-#{yield(:class_text)}" %>
+      
         
         
         <!--歩行-->
-        <br><%= f.label "［歩行］", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.radio_button :monitoring_walking, :自立 %>
+      <br><%= f.label "［歩行］", class: "label-#{yield(:class_text)}" %>
+      <br><%= f.radio_button :monitoring_walking, :自立 %>
       <%= f.label "自立", class: "label-#{yield(:class_text)}" %> 
       <%= f.radio_button :monitoring_walking, :見守り%>
       <%= f.label "見守り", class: "label-#{yield(:class_text)}" %>
