--- a/app/views/monitorings/monitoring_completion.html.erb
+++ b/app/views/monitorings/monitoring_completion.html.erb
@@ -9,24 +9,25 @@
     の利用者の状況をご報告いたします。
     </span></p>
   
-    <%= f.label "【居宅介護支援計画書の生活全般の解決すべき課題(ニーズ)", class: "label-#{yield(:class_text)}" %>
+    <td align="center"><%= f.label "【居宅介護支援計画書の生活全般の解決すべき課題(ニーズ)", class: "label-#{yield(:class_text)}" %>
     <br><%= f.text_area :monitoring_needs, class: "hoge", size: "70x7" %></br>
   
     <br><%= f.label "【居宅介護支援計画書の短期目標】", class: "label-#{yield(:class_text)}" %>
     <br><%= f.text_area :monitoring_short_run_target, class: "hoge", size: "70x7" %></br>
-  
-    <br><%= f.label "基本的サービスの状況(ＡⅮⅬを含む)" ,class: "label-#{yield(:class_text)}" %></br>
-    
+    </td>
     <tr>  
-      <td align="center"><%= f.label "［他者交流］", class: "label-#{yield(:class_text)}" %>
-      <br><%= f.radio_button :monitoring_exchange, "保たれている" %>
-      <%= f.label "保たれている", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_exchange, "ほぼ保たれている" %>
-      <%= f.label "ほぼ保たれている", class: "label-#{yield(:class_text)}" %>
-       <%= f.radio_button :monitoring_exchange, "あまり保たれていない" %>
-      <%= f.label "あまり保たれていない", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_exchange, "保たれていない" %>
-      <%= f.label "保たれていない", class: "label-#{yield(:class_text)}" %>
+      <td align="center">
+        <br><%= f.label "基本的サービスの状況(ＡⅮⅬを含む)" ,class: "label-#{yield(:class_text)}" %></br>
+    
+        <%= f.label "［他者交流］", class: "label-#{yield(:class_text)}" %>
+        <br><%= f.radio_button :monitoring_exchange, "保たれている" %>
+        <%= f.label "保たれている", class: "label-#{yield(:class_text)}" %>
+        <%= f.radio_button :monitoring_exchange, "ほぼ保たれている" %>
+        <%= f.label "ほぼ保たれている", class: "label-#{yield(:class_text)}" %>
+        <%= f.radio_button :monitoring_exchange, "あまり保たれていない" %>
+        <%= f.label "あまり保たれていない", class: "label-#{yield(:class_text)}" %>
+        <%= f.radio_button :monitoring_exchange, "保たれていない" %>
+        <%= f.label "保たれていない", class: "label-#{yield(:class_text)}" %>
       
         
         <!--送迎-->
@@ -41,25 +42,25 @@
         <!--歩行-->
         <br><%= f.label "［歩行］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button :monitoring_walking, :自立 %>
-      <%= f.label "自立", class: "label-#{yield(:class_text)}" %> 
-      <%= f.radio_button :monitoring_walking, :見守り%>
-      <%= f.label "見守り", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :一部介助 %>
-      <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :介助 %>
-      <%= f.label "介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :車いす %>
-      <%= f.label "車いす", class: "label-#{yield(:class_text)}" %>
+        <%= f.label "自立", class: "label-#{yield(:class_text)}" %> 
+        <%= f.radio_button :monitoring_walking, :見守り%>
+        <%= f.label "見守り", class: "label-#{yield(:class_text)}" %>
+        <%= f.radio_button :monitoring_walking, :一部介助 %>
+        <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
+        <%= f.radio_button :monitoring_walking, :介助 %>
+        <%= f.label "介助", class: "label-#{yield(:class_text)}" %>
+        <%= f.radio_button :monitoring_walking, :車いす %>
+        <%= f.label "車いす", class: "label-#{yield(:class_text)}" %>
          
          <!--食事-->
         <br><%= f.label "［食事］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button  :monitoring_eating, :自立 %>
-      <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button  :monitoring_eating, :一部介助 %>
-      <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button  :monitoring_eating, :全介助 %>
-      <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
-        
+        <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
+        <%= f.radio_button  :monitoring_eating, :一部介助 %>
+        <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
+        <%= f.radio_button  :monitoring_eating, :全介助 %>
+        <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
+          
         <!--参加状況-->
         <br><%= f.label "［参加状況］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button  :monitoring_situation_of_participation, :毎回実施 %>
@@ -98,7 +99,7 @@
         <%= f.label "参加している", class: "label-#{yield(:class_text)}" %>
         <%= f.radio_button :monitoring_community, :参加していない %>
         <%= f.label "参加していない", class: "label-#{yield(:class_text)}" %>
-       <%= f.radio_button :monitoring_community, :実施なし %>
+        <%= f.radio_button :monitoring_community, :実施なし %>
         <%= f.label "実施なし", class: "label-#{yield(:class_text)}" %>
         
         <br><%= f.label "社会参加しているもの", class: "label-#{yield(:class_text)}" %>
