--- a/app/assets/stylesheets/staffs.scss
+++ b/app/assets/stylesheets/staffs.scss
@@ -12,7 +12,7 @@
 
 /* ユーザー勤怠情報テーブル */
 
-#table-attendances {
+#table-client {
   th {
     vertical-align: middle;
     text-align: center;
@@ -43,7 +43,7 @@
 
 /* ユーザー一覧ページ */
 
-#table-users {
+#table-clients {
   td {
     vertical-align: middle;
   }  
