--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -1,7 +1,7 @@
 <% provide(:title, 'All Staffs') %>
   <h1>職員一覧</h1>
 
-  
+   <%= link_to "シフト表示", shifts_staff_sfift_path, class: "btn btn-primary" %>
   <%= will_paginate %>
     <table class="table table-bordered table-condensed table-hover" id="table-staffs">
       <thead>
