--- a/app/views/asesments/asesment_affter.html.erb
+++ b/app/views/asesments/asesment_affter.html.erb
@@ -2,20 +2,20 @@
   <meta charset = " utf-8 " />
   <h1>通所介護フェイスシート</h1>
   <%= form_with( model: @asesment, url: asesment_update_client_asesment_path(@client, @asesment), local: true, method: :patch) do |f| %>
-   <p><span class="under">記入年月日<%= f.date_select(:asesment_create_year, discard_month:true) %>年
+   <font size="3"><p><span class="under">記入年月日<%= f.date_select(:asesment_create_year, discard_month:true) %>年
                                       <%= f.date_select(:asesment_create_day, discard_year:true)+'日' %></span>
                                       &emsp;<span class="under"><%= f.label "実施場所", class: "label-#{yield(:class_text)}" %></span>
-                                      &emsp;<span class="under"><%= f.text_area :praxis_place, class: "hoge", size: "15x1" %></span>
+                                      &emsp;<span class="under"><%= f.text_area :praxis_place, class: "hope", size: "15x1" %></span>
                                       &emsp;<span class="under"><%= f.label "記入者", class: "label-#{yield(:class_text)}" %></span>
-                                      &emsp;<span class="under"><%= f.text_area :filling_up, class: "hoge", size: "15x1" %></span></p>
+                                      &emsp;<span class="under"><%= f.text_area :filling_up, class: "hope", size: "15x1" %></span></p>
                                     <%= f.radio_button :new_or_continuation, "新規" %>
                                     <%= f.label "新規", class: "label-#{yield(:class_text)}" %>
                                     <%= f.radio_button  :new_or_continuation, "継続" %>
-                                    <%= f.label "継続", class: "label-#{yield(:class_text)}" %>
+                                    <%= f.label "継続", class: "label-#{yield(:class_text)}" %></font>
 <br>
-1.利用者
+<font size="4">1.利用者</font>
 <br>
-    <table align="center" cellspacing="0", cellpadding="5"  width="1000">
+    <font size="4"><table align="center" cellspacing="0", cellpadding="5"  width="1000">
       <tr>
         <th class="parent" rowspan= "4">写真</th>
       </tr>
@@ -28,7 +28,7 @@
       </tr>
       <tr>
         <th class="center">被保険者番号
-        <%= f.text_area :insurance_number, class: "hoge", size: "15x1" %></th>
+        <%= f.text_area :insurance_number, class: "hope", size: "15x1" %></th>
         <th class="center"><%= @client.nursing_number %></th>   
       </tr>
       <tr>
@@ -63,61 +63,61 @@
       </tr>
       <tr>
         <th class= "center"><%= f.label "氏名", class: "label-#{yield(:class_text)}" %>
-          &emsp;<%= f.text_area :relation_name, class: "hoge", size: "15x1" %>
+          &emsp;<%= f.text_area :relation_name, class: "hope", size: "15x1" %>
           <th class= "center"><%= f.label "住所", class: "label-#{yield(:class_text)}" %>
-          &emsp;<%= f.text_area :relation_email, class: "hoge", size: "15x1" %>
+          &emsp;<%= f.text_area :relation_email, class: "hope", size: "15x1" %>
           <th class= "center">
           <%= f.label "本人との続柄", class: "label-#{yield(:class_text)}" %>
-          <br><%= f.text_area :relation_joining, class: "hoge", size: "15x1" %>
+          <br><%= f.text_area :relation_joining, class: "hope", size: "15x1" %>
           <br><%= f.label "電話番号", class: "label-#{yield(:class_text)}" %>
-          <br><%= f.text_area :relation_cellphone, class: "hoge", size: "15x1" %></th>
+          <br><%= f.text_area :relation_cellphone, class: "hope", size: "15x1" %></th>
       </tr>
       <tr>
         <th class= "center"><%= f.label "氏名", class: "label-#{yield(:class_text)}" %>
-          &emsp;<%= f.text_area :relation_name_2, class: "hoge", size: "15x1" %>
+          &emsp;<%= f.text_area :relation_name_2, class: "hope", size: "15x1" %>
           <th class= "center"><%= f.label "住所", class: "label-#{yield(:class_text)}" %>
-          &emsp;<%= f.text_area :relation_email_2, class: "hoge", size: "15x1" %>
+          &emsp;<%= f.text_area :relation_email_2, class: "hope", size: "15x1" %>
             <th class= "center">
           <%= f.label "本人との続柄", class: "label-#{yield(:class_text)}" %>
-          <br><%= f.text_area :relation_joining_2, class: "hoge", size: "15x1" %>
+          <br><%= f.text_area :relation_joining_2, class: "hope", size: "15x1" %>
           <br><%= f.label "電話番号", class: "label-#{yield(:class_text)}" %>
-          <br><%= f.text_area :relation_cellphone_2, class: "hoge", size: "15x1" %></th>
+          <br><%= f.text_area :relation_cellphone_2, class: "hope", size: "15x1" %></th>
       </tr>
       <tr>
         <th class= "center"><%= f.label "氏名", class: "label-#{yield(:class_text)}" %>
-          &emsp;<%= f.text_area :relation_name_3, class: "hoge", size: "15x1" %>
+          &emsp;<%= f.text_area :relation_name_3, class: "hope", size: "15x1" %>
           <th class= "center"><%= f.label "住所", class: "label-#{yield(:class_text)}" %>
-          &emsp;<%= f.text_area :relation_email_3, class: "hoge", size: "15x1" %>
+          &emsp;<%= f.text_area :relation_email_3, class: "hope", size: "15x1" %>
           <th class= "center">
           <%= f.label "本人との続柄", class: "label-#{yield(:class_text)}" %>
-          <br><%= f.text_area :relation_joining_3, class: "hoge", size: "15x1" %>
+          <br><%= f.text_area :relation_joining_3, class: "hope", size: "15x1" %>
           <br><%= f.label "電話番号", class: "label-#{yield(:class_text)}" %>
-          <br><%= f.text_area :relation_cellphone_3, class: "hoge", size: "15x1" %></th>
+          <br><%= f.text_area :relation_cellphone_3, class: "hope", size: "15x1" %></th>
       </tr>
     </table>
     2.健康状態
     <table align="center">
       <tr>
         <th class= "left" colspan= "2"><%= f.label "現症", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :family_health_disease, class: "hoge", size: "50x10" %></th>
+        <br><%= f.text_area :family_health_disease, class: "hope", size: "50x10" %></th>
         <th class= "left"  colspan= "2"><%= f.label "既存症", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :family_health_disease_past, class: "hoge", size: "50x10" %></th>
+        <br><%= f.text_area :family_health_disease_past, class: "hope", size: "50x10" %></th>
       </tr>
       <tr>
         <th class= "center" nowrap>視力</th>
-        <th class= "center"><%= f.text_area :eyesight, class: "hoge", size: "15x1" %></th>
+        <th class= "center"><%= f.text_area :eyesight, class: "hope", size: "15x1" %></th>
         <th  class= "center" rowspan= "3"><span class="under">平常時バイタル</span>
         <br>体温
-        <%= f.text_area :nomal_vital_body_temperature, class: "hoge", size: "5x1" %>℃
+        <%= f.text_area :nomal_vital_body_temperature, class: "hope", size: "5x1" %>℃
         <br>脈拍
-        <%= f.text_area :nomal_vital_pulse, class: "hoge", size: "5x1" %>回/分
+        <%= f.text_area :nomal_vital_pulse, class: "hope", size: "5x1" %>回/分
         <br>血圧
-        <%= f.text_area :nomal_vital_blood_pressure_up, class: "hoge", size: "5x1" %>mmHg~
-        <%= f.text_area :nomal_vital_blood_pressure_down, class: "hoge", size: "5x1" %>mmHg</th>
+        <%= f.text_area :nomal_vital_blood_pressure_up, class: "hope", size: "5x1" %>mmHg~
+        <%= f.text_area :nomal_vital_blood_pressure_down, class: "hope", size: "5x1" %>mmHg</th>
       </tr>
       <tr>
         <th class= "center" nowrap>聴力</th>
-        <th class= "center"><%= f.text_area :audition, class: "hoge", size: "15x1" %></th>
+        <th class= "center"><%= f.text_area :audition, class: "hope", size: "15x1" %></th>
       </tr>
       <tr>
         <th class= "center" rowspan= "1" nowrap>義歯</th>
@@ -132,43 +132,43 @@
             <%= f.label "無", class: "label-#{yield(:class_text)}" %>
             <br>
             <%= f.label "有の場合義歯、自歯本数", class: "label-#{yield(:class_text)}" %>
-            <br><%= f.text_area :prosthesis, class: "hoge", size: "20x1" %></th>
+            <br><%= f.text_area :prosthesis, class: "hope", size: "20x1" %></th>
       </tr>
       <tr>
         <th class= "center" rowspan= "1" nowrap>服薬</th>
         <th><span class="under">通所介護利用時の服薬内容</span>
-          <%= f.text_area :medicina, class: "hoge", size: "50x2" %>
+          <%= f.text_area :medicina, class: "hope", size: "50x2" %>
           <br><%= f.label "情報源", class: "label-#{yield(:class_text)}" %>
           <br>
           <%= f.radio_button :information_medicina,"本人"%>本人
           <%= f.radio_button :information_medicina,"家族" %>家族
-          <%= f.text_area :information_medicina_family, class: "hoge", size: "20x1" %>
+          <%= f.text_area :information_medicina_family, class: "hope", size: "20x1" %>
           <%= f.radio_button :information_medicina, "ケアマネージャー"  %>ケアマネージャー
           <br><%= f.radio_button :information_medicina, "かかりつけ医" %>かかりつけ医
           <%= f.radio_button :information_medicina, "その他"%>その他
-          <%= f.text_area :information_medicina_another, class: "hoge", size: "20x1" %>
+          <%= f.text_area :information_medicina_another, class: "hope", size: "20x1" %>
         </th>
         <th><span class="under">避けるべき薬剤・食材（・嗜好）</span>
-        <%= f.text_area :hedge_medicine_food, class: "hoge", size: "50x5" %>
+        <%= f.text_area :hedge_medicine_food, class: "hope", size: "50x5" %>
        <br><%= f.label "情報源", class: "label-#{yield(:class_text)}" %>
           <br>
           <%= f.radio_button :hedge_medicine_food_information, "本人" %>本人
           <%= f.radio_button :hedge_medicine_food_information,"家族"%>家族
-          <%= f.text_area :hedge_medicine_food_information_1, class: "hoge", size: "20x1" %>
+          <%= f.text_area :hedge_medicine_food_information_1, class: "hope", size: "20x1" %>
           <%= f.radio_button :hedge_medicine_food_information, "ケアマネージャー" %>ケアマネージャー
           <br><%= f.radio_button :hedge_medicine_food_information,"かかりつけ医" %>かかりつけ医
           <%= f.radio_button :hedge_medicine_food_information, "その他" %>その他
-          <%= f.text_area :hedge_medicine_food_information_2, class: "hoge", size: "20x1" %>
+          <%= f.text_area :hedge_medicine_food_information_2, class: "hope", size: "20x1" %>
       </tr>
       <tr>
         <th class= "center" colspan= "4">かかりつけ医
-             &emsp;<%= f.text_area :hospital_name, class: "hoge", size: "20x1" %>
-            医師&emsp;<%= f.text_area :hospital_doctor, class: "hoge", size: "20x1" %>
-            ℡&emsp;<%= f.text_area :hospital_doctor_nymber, class: "hoge", size: "20x1" %>
+             &emsp;<%= f.text_area :hospital_name, class: "hope", size: "20x1" %>
+            医師&emsp;<%= f.text_area :hospital_doctor, class: "hope", size: "20x1" %>
+            ℡&emsp;<%= f.text_area :hospital_doctor_nymber, class: "hope", size: "20x1" %>
           <br>かかりつけ医
-          &emsp;<%= f.text_area :hospital_name_1, class: "hoge", size: "20x1" %>
-            医師&emsp;<%= f.text_area :hospital_doctor_1, class: "hoge", size: "20x1" %>
-            ℡&emsp;<%= f.text_area :hospital_doctor_nymber_1, class: "hoge", size: "20x1" %></th>    
+          &emsp;<%= f.text_area :hospital_name_1, class: "hope", size: "20x1" %>
+            医師&emsp;<%= f.text_area :hospital_doctor_1, class: "hope", size: "20x1" %>
+            ℡&emsp;<%= f.text_area :hospital_doctor_nymber_1, class: "hope", size: "20x1" %></th>    
       </tr>
       <tr>
         <th>医師の指示注意事項</th>  
@@ -177,34 +177,34 @@
             <%= f.label "可", class: "label-#{yield(:class_text)}" %>
             <%= f.radio_button  :doctor_bath, "継続" %>
             <%= f.label "否", class: "label-#{yield(:class_text)}" %>
-            &emsp;<%= f.text_area :doctor_bath_another, class: "hoge", size: "70x1" %>
+            &emsp;<%= f.text_area :doctor_bath_another, class: "hope", size: "70x1" %>
                                      
           <br>皮膚疾患
              &emsp;<%= f.radio_button :doctor_skin, "有" %>
             <%= f.label "有", class: "label-#{yield(:class_text)}" %>
             <%= f.radio_button  :doctor_skin, "無" %>
             <%= f.label "無", class: "label-#{yield(:class_text)}" %>
-            &emsp;<%= f.text_area :doctor_skin_another, class: "hoge", size: "70x1" %>
+            &emsp;<%= f.text_area :doctor_skin_another, class: "hope", size: "70x1" %>
         
           <br>移送時の留意点
              &emsp;<%= f.radio_button :doctor_transfer, "有" %>
             <%= f.label "有", class: "label-#{yield(:class_text)}" %>
             <%= f.radio_button  :doctor_transfer, "無" %>
             <%= f.label "無", class: "label-#{yield(:class_text)}" %>
-            &emsp;<%= f.text_area :doctor_transfer_another, class: "hoge", size: "70x1" %>
+            &emsp;<%= f.text_area :doctor_transfer_another, class: "hope", size: "70x1" %>
         
           <br>その他制限事項
              &emsp;<%= f.radio_button :doctor_etcetera, "有" %>
             <%= f.label "有", class: "label-#{yield(:class_text)}" %>
             <%= f.radio_button  :doctor_etcetera, "無" %>
             <%= f.label "無", class: "label-#{yield(:class_text)}" %>
-            &emsp;<%= f.text_area :doctor_etcetera_another, class: "hoge", size: "70x1" %>
+            &emsp;<%= f.text_area :doctor_etcetera_another, class: "hope", size: "70x1" %>
         </th>
       </tr>
         <tr>
-        <th class= "center" colspan= "4">【特機事項】<%= f.text_area :specialized_equipment, class: "hoge", size: "100x20" %></th>
+        <th class= "center" colspan= "4">【特機事項】<%= f.text_area :specialized_equipment, class: "hope", size: "100x20" %></th>
         </tr>                    
-    </table>
+    </table></font>
     <br><%= f.label "確認", class: "label-#{yield(:class_text)}" %>
         <%= f.check_box :check_a, {checked: false}, "true", "false" %>
     <br><%= f.submit "編集", class: "btn btn-success" %>
