--- a/app/views/businesslogs/affter_businesslog.html.erb
+++ b/app/views/businesslogs/affter_businesslog.html.erb
@@ -56,17 +56,17 @@
 				<tr>
 					<th class ="center">[バイタル]</th>
 					<th class ="center">[体温]
-					<br><%= f.number_field :log_body_temperature, min: 33, step: '0.1',  class: "hoge" %>℃</th>
+					<br><%= f.number_field :log_body_temperature, min: 33, step: '0.1',  class: "log" %>℃</th>
 					<th class ="center">[血圧]
-					<br><%= f.number_field :log_pressure_up, class: "hoge", min: 30, max: 300 %>/
-					<%= f.number_field :log_pressure_down, class: "hoge", min: 30, max: 300 %></th>
+					<br><%= f.number_field :log_pressure_up, class: "log", min: 30, max: 300 %>/
+					<%= f.number_field :log_pressure_down, class: "log", min: 30, max: 300 %></th>
 					<th class ="center">[脈]
-					<br><%= f.number_field :log_pulse,  class: "hoge", min: 20, max: 200 %></th>
+					<br><%= f.number_field :log_pulse,  class: "log", min: 20, max: 200 %></th>
 					<th class ="center"rowpan="2">［再検査］
 					<br><%= f.check_box :log_check_return ,{}, "true", "false"%></th>
 					<th class ="center">[血圧]<br><%=  f.number_field :re_log_pressure_up, min: 20, max: 200 %>/
 					<%=  f.number_field :re_log_pressure_down, min: 20, max: 200 %></th>
-					<th class ="center">[体温]<br><%= f.number_field :re_log_body_temperature,  min: 33, step: '0.1',  class: "hoge" %>℃</th>
+					<th class ="center">[体温]<br><%= f.number_field :re_log_body_temperature,  min: 33, step: '0.1',  class: "log" %>℃</th>
 					<th class ="center">[脈]<br><%=  f.number_field :re_log_pulse, min: 20, max: 200 %></th>
 				</tr>
 				<tr>
@@ -80,13 +80,13 @@
 				<tr>
 					<th colspan = "6" rowspan= "2">
 						[特記事項]
-						<%= f.text_area :log_special_mention, class: "hoge", size: "100x4" %>
+						<%= f.text_area :log_special_mention, class: "log", size: "100x4" %>
 					</th>
 					<th class = "center"colspan= "2">
 					[記録者印]
 					</th>
 				</tr>
-				<th class ="center" colspan= "2"><%= f.text_area :log_record_stamp, class: "hope", size: "4x1" %></th>	
+				<th class ="center" colspan= "2"><%= f.text_area :log_record_stamp, class: "log", size: "4x1" %></th>	
 			</table>
 			<%= f.check_box :check_log ,{checked: false}, "true", "false" %>
 			確認
