大きさ個別記録変える

--- a/app/views/businesslogs/affter_businesslog.html.erb
+++ b/app/views/businesslogs/affter_businesslog.html.erb
@@ -2,7 +2,7 @@
   <meta charset = " utf-8 " />
 		<h1>個別記録</h1>
 		<%=form_with( model: @businesslog, url: update_businesslog_client_businesslog_path(@client, @businesslog), local: true, method: :patch) do |f| %>
-			<p><span class="under">氏名&emsp;<%= @client.client_name %>様</span></p>
+			<font size= "4"><p><span class="under">氏名&emsp;<%= @client.client_name %>様</span></p>
 			<table align="center" cellspacing="", cellpadding="5">
 				<tr>
 				<% css_class = 
@@ -54,20 +54,20 @@
 					<th></th>
 				</tr>
 				<tr>
-					<th class ="center">[バイタル]</th>
+					<th class ="center">[バイタル]</th>						
 					<th class ="center">[体温]
-					<br><%= f.number_field :log_body_temperature, min: 33, step: '0.1',  class: "log" %>℃</th>
+					<br><%= f.number_field :log_body_temperature, min: 33, step: '0.1',  class: "logs" %>℃</th>
 					<th class ="center">[血圧]
-					<br><%= f.number_field :log_pressure_up, class: "log", min: 30, max: 300 %>/
-					<%= f.number_field :log_pressure_down, class: "log", min: 30, max: 300 %></th>
+					<br><%= f.number_field :log_pressure_up, class: "logs", min: 30, max: 300 %>/
+					<%= f.number_field :log_pressure_down, class: "logs", min: 30, max: 300 %></th>
 					<th class ="center">[脈]
-					<br><%= f.number_field :log_pulse,  class: "log", min: 20, max: 200 %></th>
+					<br><%= f.number_field :log_pulse,  class: "logs", min: 20, max: 200, class: "logs"%></th>
 					<th class ="center"rowpan="2">［再検査］
 					<br><%= f.check_box :log_check_return ,{}, "true", "false"%></th>
-					<th class ="center">[血圧]<br><%=  f.number_field :re_log_pressure_up, min: 20, max: 200 %>/
-					<%=  f.number_field :re_log_pressure_down, min: 20, max: 200 %></th>
-					<th class ="center">[体温]<br><%= f.number_field :re_log_body_temperature,  min: 33, step: '0.1',  class: "log" %>℃</th>
-					<th class ="center">[脈]<br><%=  f.number_field :re_log_pulse, min: 20, max: 200 %></th>
+					<th class ="center">[血圧]<br><%=  f.number_field :re_log_pressure_up, min: 20, max: 200, class: "logs"%>/
+					<%=  f.number_field :re_log_pressure_down, min: 20, max: 200, class: "logs" %></th>
+					<th class ="center">[体温]<br><%= f.number_field :re_log_body_temperature,  min: 33, step: '0.1',  class: "logs" %>℃</th>
+					<th class ="center">[脈]<br><%=  f.number_field :re_log_pulse, min: 20, max: 200, class: "logs" %></th>
 				</tr>
 				<tr>
 					<th class ="center" colspan= "8">
@@ -94,5 +94,5 @@
 		<% end %>
 		<br><%= link_to "削除", businesslog_delete_client_businesslog_path(@client, @businesslog), method: :delete,
                     data: { confirm: "削除してよろしいですか？" },
-                    class: "btn btn-danger" %>
+                    class: "btn btn-danger" %></font>
 </div>					
