大きさ個別記録変える

--- a/app/views/businesslogs/businesslog_completion_copy.html.erb
+++ b/app/views/businesslogs/businesslog_completion_copy.html.erb
@@ -136,7 +136,7 @@
 						<tr>
 							<th colspan = "6" rowspan= "2">
 								[特記事項]
-								<textarea name="log_special_mention" rows="4" cols="100"><%= log.log_special_mention %></textarea>
+								<textarea name="log_special_mention" rows="4" cols="100" class= "log"><%= log.log_special_mention %></textarea>
 							</th>
 							<th class = "center"colspan= "2">
 							[記録者印]
