シフト編集

--- a/app/views/asesments/asesment_new.html.erb
+++ b/app/views/asesments/asesment_new.html.erb
@@ -207,7 +207,7 @@
     </table></font>
     <br><%= f.label "確認", class: "label-#{yield(:class_text)}" %>
         <%= f.check_box :check_a, {checked: false}, "true", "false" %>
-    <br><%= f.submit "編集", class: "btn btn-success" %>
+    <br><%= f.submit "追加", class: "btn btn-success" %>
   <% end %>
 </div>                
        
