シフト編集画面のみ

--- a/app/views/staffs/shifts_edit.html.erb
+++ b/app/views/staffs/shifts_edit.html.erb
@@ -22,5 +22,6 @@
 			<% end %>
 		<% end %>	
 	</table>
-	<%= f.submit "シフトを記入する！", class: "btn btn-primary" %>
+	<br><%= f.submit "更新", class: "btn btn-primary" %></br>
+	<br><%= link_to "シフト編集業務", shifts_shifts_change_path, class: "btn btn-primary" %>
 <% end %>			
