シフト形だけ完成広さもOK

--- a/app/assets/stylesheets/shifts.scss
+++ b/app/assets/stylesheets/shifts.scss
@@ -1,3 +1,21 @@
 // Place all the styles related to the shifts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.shifts-table{
+    th {
+        vertical-align: middle;
+        text-align: center;
+        width: 200%;
+      }
+      td {
+        vertical-align: middle;
+        text-align: center;
+        width: 200%;
+      }
+}
+
+.staff_name{
+
+  width: 1%
+}
