--- a/app/views/shifts/shifts_change.html.erb
+++ b/app/views/shifts/shifts_change.html.erb
@@ -1,26 +1,35 @@
-<table align="center" cellspacing="5", cellpadding="5">
-	<thead>
-		<tr>
-			<% [*@first_day..@last_day].each do |day| %>
-				<th></th>
-				<th></th>
-				<th><font size="5"><%= day.strftime("%d") %></font></th>
-			<% end %>
-		</tr>
-		<tr>
-			<% [*@first_day..@last_day].each do |day| %>
-				<th></th>
-				<th></th>
-				<th><font size= "5"><%= $days_of_the_week[day.wday] %></font></th>
-			<% end %>
-		</tr>
-	</thead>
-	<tbody>
-		<% @staffs.each do |staff| %>
+<div class= "center"> 
+	<table align="center" class="table-border-dark table-condensed table-hover shifts-table">
+	<%=%>
+		<thead>
 			<tr>
 				<th></th>
-				<td><font size= "5"><%= staff.name %></font></td>
+				<% [*@first_day..@last_day].each do |day| %>
+					<th width="1"><%= day.strftime("%d") %></th>
+				<% end %>
 			</tr>
-		<% end %>	
-	</tbody>
-</table>
+			<tr>
+				<th></th>
+				<% [*@first_day..@last_day].each do |day| %>
+					<th width="1"><%= $days_of_the_week[day.wday] %></th>
+				<% end %>
+			</tr>
+			<tr>
+				<th></th>
+				<% [*@first_day..@last_day].each do |day| %>
+					<th width="1"></th>
+				<% end %>
+			</tr>
+		</thead>
+		<tbody>
+			<% @staffs.each do |staff| %>
+				<tr>
+					<th width="0"><%= staff.name %></th>
+					<% [*@first_day..@last_day].each do |day| %>
+						<td width="1"></td>
+					<% end %>	
+				</tr>
+			<% end %>	
+		</tbody>
+	</table>
+</div> 
