シフト表月入力残りはjavascriptを使って合計

--- a/app/views/staffs/shifts_edit.html.erb
+++ b/app/views/staffs/shifts_edit.html.erb
@@ -1,5 +1,5 @@
 <h1>来月のシフトスタッフチェック</h1>
-<%= form_with( model: @staffs, url: check_shifts_update_staff_url(@staffs), local: true, method: :patch) do |f|%>
+<%= form_with( model: @staffs, url: check_shifts_update_staff_url, local: true, method: :patch) do |f|%>
 	<table class="table table-bordered table-condensed table-hover" id="table-clientes">
 		<thead>
 			<tr>
