--- a/app/views/shifts/shifts_change.html.erb
+++ b/app/views/shifts/shifts_change.html.erb
@@ -1,35 +1,47 @@
 <div class= "center"> 
-	<table align="center" class="table-border-dark table-condensed table-hover shifts-table">
-	<%=%>
-		<thead>
-			<tr>
-				<th></th>
-				<% [*@first_day..@last_day].each do |day| %>
-					<th width="1"><%= day.strftime("%d") %></th>
-				<% end %>
-			</tr>
-			<tr>
-				<th></th>
-				<% [*@first_day..@last_day].each do |day| %>
-					<th width="1"><%= $days_of_the_week[day.wday] %></th>
-				<% end %>
-			</tr>
-			<tr>
-				<th></th>
-				<% [*@first_day..@last_day].each do |day| %>
-					<th width="1"></th>
-				<% end %>
-			</tr>
-		</thead>
-		<tbody>
-			<% @staffs.each do |staff| %>
-				<tr>
-					<th width="0"><%= staff.name %></th>
-					<% [*@first_day..@last_day].each do |day| %>
-						<td width="1"></td>
+		<%= form_with( model: @staffs, url: shifts_shifts_update_path, local: true, method: :patch) do |f| %>
+	<table>
+		<tr>
+      <td>
+          <%= link_to "⇦ ",shifts_shifts_change_path(date: @first_day.prev_month), class: "btn btn-info" %>
+        【<%= l(@first_day, format: :middle) %>】時間管理表
+          <%= link_to " ⇨", shifts_shifts_change_path(date: @first_day.next_month), class: "btn btn-info" %>
+      </td>
+		</tr>
+	</table>	
+	<table align="left" class="table-border-dark table-condensed table-hover shifts-table">
+			<!--< %= f.fields_for "staffs[]", staff do |s| %>-->
+				<thead>
+					<tr>
+						<th></th>
+						<% [*@first_day..@last_day].each do |day| %>
+							<th><%= day.strftime("%d") %></th>
+						<% end %>
+					</tr>
+					<tr>
+						<th></th>
+						<% [*@first_day..@last_day].each do |day| %>
+							<th><%= $days_of_the_week[day.wday] %></th>
+						<% end %>
+					</tr>
+					<tr>
+						<th></th>
+						<% [*@first_day..@last_day].each do |day| %>
+							<th><%= f.text_area :day_shift_a ,size: "1x7" %></th>
+						<% end %>
+					</tr>
+				</thead>
+				<tbody>
+					<% @staffs.each do |staff| %>
+						<tr>
+							<th width="0"><%= staff.name %></th>
+							<% [*@first_day..@last_day].each do |day| %>
+								<td><%= f.select :day_shift,[['日'],['A'],['休'],['(休)'],['夜'],['明'],['/休'],['休/'],['(有)']],{ include_blank: true} %></td>
+							<% end %>	
+						</tr>
 					<% end %>	
-				</tr>
-			<% end %>	
-		</tbody>
-	</table>
+				</tbody>
+			<!--< % end %>-->	
+		</table>
+	<% end %>	
 </div> 
